--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "passport-oauth2",
-  "version": "1.1.1",
+  "version": "1.1.1private",
+  "private": true,
   "description": "OAuth 2.0 authentication strategy for Passport.",
   "keywords": [
     "passport",
