--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-oauth2",
-  "version": "1.1.1c",
+  "version": "1.1.1d",
   "private": true,
   "description": "OAuth 2.0 authentication strategy for Passport.",
   "keywords": [
