--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitter-passport-oauth2",
-  "version": "1.1.2",
+  "version": "1.1.2-a",
   "description": "OAuth 2.0 authentication strategy for Passport.",
   "keywords": [
     "passport",
